--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-helmet": "^6.1.11",
     "gh-pages": "^6.1.1",
     "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
