--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^6.1.1",
     "i18next": "^23.12.2",
@@ -22,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.0.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
