--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
         with:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
-          repositories: lbol-logs
+          owner: 'ed-ev'
+          repositories: 'lbol-logs'
       - uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
