--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -b public"
+    "deploy": "gh-pages -d build -r \"https://github.com/ed-ev/lbol-logs.git\" -b public"
   },
   "eslintConfig": {
     "extends": [
