--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/_avif
-/_original
+/avif/_avif
+/avif/_original
 /public/images
 /public/locales
