--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rd /s /q \"./build/assets\" \"./build/logs\" && copy build\\index.html build\\404.html",
+    "build": "react-scripts build && rd /s /q \"./build/assets\" \"./build/mods\" \"./build/logs\" && copy build\\index.html build\\404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
