--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^6.1.1",
+    "html2canvas-pro": "^1.5.8",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
